--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
 <header>
     <h1>{{ .Site.Title }}</h1>
-    <p>Front-end Dev Intern @ IBM | <a href="https://github.com/keanemind">GitHub</a></p>
+    <p>Aspiring hammerhead shark | <a href="https://github.com/keanemind">GitHub</a></p>
 </header>
